--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .idea
 
 # Generic
+.env
 *.log
 *.backup
 *.local.sh
@@ -13,3 +14,6 @@
 *.local.yaml
 *.local.json
 *.local.txt
+
+# App
+prometheus-node-exporter-to-json
